--- a/src/AddTransactionModel.css
+++ b/src/AddTransactionModel.css
@@ -51,6 +51,7 @@
     display: flex;
     justify-content: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .button-div>button {
@@ -61,6 +62,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    cursor: pointer;
 }
 
 .add-transaction-model-container input {
