--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,55 +1,55 @@
-.portfolio-header, .portfolio{
+.portfolio-header,
+.portfolio {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.portfolio-header{
-    font-weight: bold;
-    font-size: small;
-    margin-top:5px;
-    margin-bottom:5px;
+.portfolio-header {
+    font-weight: 600;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.portfolios{
+.portfolio {
+    cursor: pointer;
     background-color: rgb(239, 242, 245);
     border-radius: 8px;
     padding: 10px;
-    margin-top:5px;
-    margin-bottom:5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.portfolio-name{
-    font-weight: bold;
-    font-size: medium;
+.portfolio-name {
+    font-weight: 600;
+    font-size: 14px;
 }
 
-.portfolio-value{
-    color:grey;
+.portfolio-value {
+    color: grey;
     font-size: small;
 }
 
-.sidebar{
-    width:300px
+.sidebar {
+    width: 350px
 }
 
-button{
-   background: none;
-   display: flex;
-   align-items: center;
-   cursor: pointer;
-   color: #3861FB;
-   font-weight: bold;
-}
-
-button > span{
-    font-weight: bolder;
+.sidebar .button {
+    padding-left: 0;
+    margin-left: 0;
+    font-weight: 600;
+    font-size: 15px;
+    background: none;
+    cursor: pointer;
+    color: #436af7;
+    font-weight: bold;
 }
 
 
 
 @media only screen and (max-width: 900px) {
-    .sidebar{
+    .sidebar {
         display: none;
     }
-  }
+}
