--- a/src/Stats.css
+++ b/src/Stats.css
@@ -1,11 +1,9 @@
 .stats{
     display: flex;
     width: 100%;
-    margin-top: 0;
-}
-
-.stats > div{
-    padding:25px
+    margin-top: 45px;
+    margin-bottom: 50px;
+    padding-left: 20px;
 }
 
 .title{
@@ -15,7 +13,13 @@
 }
 
 .change{
-    color:#16c784;
     font-size: 15px;
     font-weight: 600;
+}
+
+.stats > div {
+    padding: 15px 25px;
+    border-radius: 10px;
+    box-shadow: 0px 1px 2px 0px rgba(88,102,126,0.12),0px 4px 24px 0px rgba(88,102,126,0.08);
+    margin-right: 25px;
 }
