--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,35 +1,36 @@
-.footer{
+.footer {
     display: flex;
     flex-direction: row;
     padding-top: 50px;
+    border-top: 1px solid #EFF2F5;
     padding-bottom: 50px;
 }
 
-.img-div{
-    width:40%;
+.img-div {
+    width: 40%;
     margin: auto;
 }
 
-.footer-logo{
-    width:240px;
+.footer-logo {
+    width: 240px;
 }
 
-.info-div{
-    width:60%;
+.info-div {
+    width: 60%;
     display: flex;
     justify-content: space-evenly;
 }
 
-h2{
+h2 {
     font-weight: 600;
     font-size: 16px;
 }
 
-li{
+li {
     margin-top: 15px;
 }
 
-ul{
+ul {
     margin-top: 25px;
     font-size: 15px;
     font-weight: 500;
@@ -37,7 +38,7 @@ ul{
     list-style: none;
 }
 
-.copyright{
+.copyright {
     padding: 25px;
     font-weight: 500;
     font-size: 14px;
