--- a/src/Assets.css
+++ b/src/Assets.css
@@ -5,7 +5,8 @@ th {
 
 .assets {
     width: 100%;
-    margin: 20px 20px 0 20px;
+    padding: 20px 20px 0 20px;
+    overflow: scroll;
 }
 
 table {
@@ -67,4 +68,18 @@ table {
 
 .assets .actions .more {
     padding-left: 8px;
+}
+
+
+.assets::-webkit-scrollbar {
+    display: none;
+}
+
+@media only screen and (max-width: 900px) {
+    .skipped {
+       display: none !important;
+    }
+    .actions{
+        font-size: 14px;
+    }
 }
