--- a/src/CreateTransactionModel.css
+++ b/src/CreateTransactionModel.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 .create-transaction-model-container h1 {
@@ -101,6 +102,7 @@
 @media only screen and (max-width: 450px) {
     .create-transaction-model-container {
         width: 100vw;
+        height: 100vh;
         border-radius: 0px;
     }
 }
