--- a/src/DetailsTop.css
+++ b/src/DetailsTop.css
@@ -1,6 +1,6 @@
 .details-top{
     width: 100%;
-    margin:20px 20px 0 20px;
+    padding:20px 20px 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,4 +40,15 @@
     font-size: 36px;
     margin-top: 8px;
     margin-bottom: 8px;
+}
+
+
+@media only screen and (max-width: 900px) {
+    .details-top{
+       flex-direction: column;
+       align-items: start;
+    }
+    .details-top button{
+        margin-top: 25px;
+    }
 }
