--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,6 @@
 .main{
     display: flex;
-    margin: 30px;
+    margin: 32px;
 }
 
 .middle, .middle-no-transaction{
@@ -37,9 +37,30 @@
 }
 
 .middle-no-transaction p {
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     font-size: 20px;
     font-weight: 500;
     color:rgb(88, 102, 126)
+}
+
+
+
+
+
+@media only screen and (max-width: 900px) {
+    .main {
+       margin: 0;
+       padding: 0;
+       padding-top: 20px;
+       width: 100%;
+    }
+    .middle{
+        margin: 0;
+        padding: 0;
+    }
+    .middle-no-transaction h1 {
+        font-size: 30px;
+        padding-left: 15px;
+    }
 }
