--- a/src/NoPortfolio.css
+++ b/src/NoPortfolio.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 20px;
+    padding: 0 20px;
 }
 
 .no-portfolio .image {
@@ -46,9 +46,9 @@
 }
 
 .heading h1{
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 700;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .heading p{
