--- a/src/Stats.css
+++ b/src/Stats.css
@@ -23,3 +23,24 @@
     box-shadow: 0px 1px 2px 0px rgba(88,102,126,0.12),0px 4px 24px 0px rgba(88,102,126,0.08);
     margin-right: 25px;
 }
+
+
+@media only screen and (max-width: 900px) {
+    .stats {
+        align-items: center;
+        flex-direction: column;
+    }
+    .stats>div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        justify-items: flex-end;
+        padding: 20px;
+        width: 100%;
+    }
+    .stats>div>div{
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+    }
+}
