--- a/src/Transaction.css
+++ b/src/Transaction.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 .transaction-model-container h1 {
@@ -121,6 +122,7 @@
 }
 
 .transaction-model-container .transaction-details input{
+    width: 95%;
     border: 1px solid rgb(207, 214, 228);
     border-radius: 8px;
     margin-top: 10px;
@@ -188,6 +190,7 @@ font-weight: 600;
 @media only screen and (max-width: 450px) {
     .transaction-model-container {
         width: 100vw;
+        height: 100vh;
         border-radius: 0px;
     }
 }
