--- a/src/Assets.css
+++ b/src/Assets.css
@@ -75,6 +75,20 @@ table {
     display: none;
 }
 
+.assets .delete-transaction{
+    padding: 8px 10px;
+    position:absolute;
+    background: #ffffff;
+    top: 85%;
+    left: 85%;
+    box-shadow: 0px 1px 2px 0px rgba(88,102,126,0.12),0px 4px 24px 0px rgba(88,102,126,0.08);
+}
+
+.delete-transaction-row{
+    display: flex;
+    align-items: center;
+}
+
 @media only screen and (max-width: 900px) {
     .skipped {
        display: none !important;
