--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     padding: 50px 20px;
-    border-top: 1px solid #EFF2F5;
+    border-top: 1px solid #e4e6e9;
 }
 
 .img-div {
