--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 80px;
   font-weight: bold;
-  border-bottom: 0.05px solid lightgray;
+  border-bottom: 1px solid #e4e6e9;
   font-size:15px;
 }
 
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   height: 45px;
-  border-bottom: 0.05px solid lightgray;
+  border-bottom: 1px solid #e4e6e9;
   font-size:12px;
 }
 
