--- a/src/Home.css
+++ b/src/Home.css
@@ -1,86 +1,134 @@
 .home {
-    z-index: 1;
-    display: flex;
-    padding: 30px;
-    padding-top:60px;
-    padding-bottom: 146.5px;
-    border-bottom: 0.05px solid lightgray;
+  z-index: 1;
+  display: flex;
+  padding: 30px;
+  padding-top: 60px;
+  padding-bottom: 146.5px;
+  border-bottom: 0.05px solid lightgray;
 }
 
 .sign-up {
-    margin: auto;
-    width: 50%;
+  margin: auto;
+  width: 50%;
 }
 
-.screenshot {
+/* .screenshot {
     margin: auto;
     width: 50%;
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
+} */
 
 h3 {
-    font-weight: 600;
-    font-size: 24px;
-    color: #3861fb;
+  font-weight: 600;
+  font-size: 24px;
+  color: #3861fb;
 }
 
 h1 {
-    margin-top: 5px;
-    font-weight: 700;
-    font-size: 48px;
+  margin-top: 5px;
+  font-weight: 700;
+  font-size: 48px;
 }
 
 .home-p {
-    margin-top: 10px;
-    color: rgb(88, 102, 126);
-    font-size: 16px;
+  margin-top: 10px;
+  color: rgb(88, 102, 126);
+  font-size: 16px;
 }
 
 .buttons {
-    display: flex;
-    margin-top: 35px;
+  display: flex;
+  margin-top: 35px;
 }
 
 button {
-    font-weight: 600;
-    font-size: 14px;
-    border-radius: 8px;
-    padding: 15px 18px;
-    margin: 0;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 8px;
+  padding: 15px 18px;
+  margin: 0;
 }
 
+.screenshot-pc {
+  z-index: 1;
+  object-fit: cover;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.screenshot-mobile {
+  position: relative;
+  z-index: 99;
+  top: 5%;
+  left: -5%;
+  object-fit: cover;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
 .button1 {
-    background: rgb(56, 97, 251);
-    color: white;
+  background: rgb(56, 97, 251);
+  color: white;
 }
 
 .button1:hover {
-    background: rgb(54, 93, 236);
+  background: rgb(54, 93, 236);
 }
 
 .button2 {
-    color: black;
-    margin-left: 15px;
+  color: black;
+  margin-left: 15px;
 }
 
 .button2:hover {
-    background: rgb(248, 247, 247);
+  background: rgb(248, 247, 247);
 }
 
 @media only screen and (max-width: 900px) {
-    .home {
-        flex-direction: column-reverse;
-        padding-bottom: 70px;
-    }
+  .home {
+    flex-direction: column-reverse;
+    padding-bottom: 70px;
+  }
 
-    .sign-up {
-        margin-top: 50px;
-        width: 100%;
-    }
+  .sign-up {
+    margin-top: 50px;
+    width: 100%;
+  }
 
-    .screenshot {
-        width: 100%;
-    }
+  /* .screenshot-pc {
+    width: 100%;
+    height: 100%;
+  }
+
+  .screenshot-mobile {
+    display: none;
+  } */
+
+  .home{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .screenshot-pc {
+    z-index: 1;
+    object-fit: cover;
+    height: 220px;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+  
+  .screenshot-mobile {
+    position: relative;
+    z-index: 99;
+    top: 5%;
+    left: -5%;
+    object-fit: cover;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
 }
